Add distance exercise

--- a/notebooks/NLP_101_Tokenization_BoW_TFIDF.ipynb
+++ b/notebooks/NLP_101_Tokenization_BoW_TFIDF.ipynb
@@ -208,7 +208,9 @@
     "docs = [\n",
     "    \"The ships hung in the sky in much the same way that bricks don’t.\",\n",
     "    \"Time is an illusion. Lunchtime doubly so.\",\n",
-    "    \"The Answer to the Great Question... Of Life, the Universe and Everything... Is... Forty-two.\"\n",
+    "    \"The Answer to the Great Question... Of Life, the Universe and Everything... Is... Forty-two.\",\n",
+    "    \"It was a  particular  type  of  rain  he  particularly  disliked, particularly  when he was driving. He had a number for it. It was rain type 17.\",\n",
+    "    \"He blinked, and understood nothing.\"\n",
     "]"
    ]
   },
@@ -368,15 +370,170 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795fc1a2-f9b6-4811-90b4-0bbca8126b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity, euclidean_distances, manhattan_distances\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Vectorize using TF-IDF\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_tfidf = vectorizer.fit_transform(docs)\n",
+    "\n",
+    "# Compute similarity/distance matrices\n",
+    "cos_sim = cosine_similarity(X_tfidf)\n",
+    "eucl_dist = euclidean_distances(X_tfidf)\n",
+    "manh_dist = manhattan_distances(X_tfidf)\n",
+    "\n",
+    "# Function to plot heatmaps\n",
+    "def plot_heatmap(matrix, title, labels):\n",
+    "    df = pd.DataFrame(matrix, index=labels, columns=labels)\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(df, annot=True, cmap=\"viridis\")\n",
+    "    plt.title(title)\n",
+    "    plt.show()\n",
+    "\n",
+    "labels = [f'Doc {i+1}' for i in range(len(docs))]\n",
+    "\n",
+    "# Plot results\n",
+    "plot_heatmap(cos_sim, \"Cosine Similarity\", labels)\n",
+    "plot_heatmap(eucl_dist, \"Euclidean Distance\", labels)\n",
+    "plot_heatmap(manh_dist, \"Manhattan Distance\", labels)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cada0c5-0545-43c1-9c64-c152c093ff1a",
+   "metadata": {},
+   "source": [
+    "## 🧪 Exercise 4: Word-Level Distance Comparisons\n",
+    "\n",
+    "**Goal:** Explore how close or far apart individual words are based on the vector space created during tokenization.\n",
+    "\n",
+    "**Optional:** Implement a simple k-Nearest Neighbours\n",
+    "\n",
+    "### 🧰 Tools:\n",
+    "\n",
+    "`cosine_similarity` (or any other) from `sklearn.metrics.pairwise`\n",
+    "\n",
+    "\n",
+    "### 💻 Task:\n",
+    "- Select two words from the dictionary\n",
+    "- Calculate the distance between them\n",
+    "- Optional: Pick a word and calculate all distances to the other words (order them ascending) - print k\n",
+    "\n",
+    "### ✅ Expected Output (example):\n",
+    "\n",
+    "```python\n",
+    "Word 1 has distance 0.457234 to Word 2\n",
+    "\n",
+    "# optional\n",
+    "The 3 nearest words to word 1 are:\n",
+    "Word 2: 0.0123\n",
+    "Word 7: 0.1543\n",
+    "Word 4: 0.2872\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b250a6a-f042-4eb3-a9b4-c1347f4a9971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a7dfa4-64f1-42c5-92ba-806a3353f2c1",
+   "metadata": {},
+   "source": [
+    "### 📖 Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4990f41-134a-426e-97ac-76bb832f7756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
+    "# Get vocabulary\n",
+    "vocab = tfidf_vectorizer.get_feature_names_out()\n",
+    "vocab_dict = {word: idx for idx, word in enumerate(vocab)}\n",
+    "\n",
+    "# Pick two words\n",
+    "word1 = \"illusion\"\n",
+    "word2 = \"rain\"\n",
+    "\n",
+    "# Ensure both words exist in vocab\n",
+    "if word1 in vocab_dict and word2 in vocab_dict:\n",
+    "    vec1 = tfidf[:, vocab_dict[word1]].toarray()\n",
+    "    vec2 = tfidf[:, vocab_dict[word2]].toarray()\n",
+    "    \n",
+    "    eucl = euclidean_distances(vec1.T, vec2.T)[0][0]\n",
+    "    \n",
+    "    print(f\"Euclidean distance between '{word1}' and '{word2}': {eucl:.4f}\")\n",
+    "else:\n",
+    "    print(\"One of the words is not in the vocabulary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae2e1f5b-bc5c-41c0-af11-815870d6c750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose target word\n",
+    "target_word = \"rain\"\n",
+    "\n",
+    "# Ensure word exists\n",
+    "if target_word in vocab_dict:\n",
+    "    target_vec = tfidf[:, vocab_dict[target_word]].toarray()\n",
+    "    \n",
+    "    distances = {}\n",
+    "    for word in vocab:\n",
+    "        if word == target_word:\n",
+    "            continue\n",
+    "        word_vec = tfidf[:, vocab_dict[word]].toarray()\n",
+    "        dist = euclidean_distances(target_vec.T, word_vec.T)[0][0]\n",
+    "        distances[word] = dist\n",
+    "\n",
+    "    # Sort by closest\n",
+    "    sorted_words = sorted(distances.items(), key=lambda x: x[1])\n",
+    "    \n",
+    "    print(f\"\\nTop 5 words closest to '{target_word}' by euclidean distance:\")\n",
+    "    for word, dist in sorted_words[:3]:\n",
+    "        print(f\"{word}: {dist:.4f}\")\n",
+    "else:\n",
+    "    print(\"Target word is not in the vocabulary.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2efc5c91-4cf2-40fd-852b-bd3fa761ec51",
    "metadata": {},
    "source": [
-    "## 🧪 Exercise 4: Cosine Similarity Between Texts\n",
+    "## 🧪 Exercise 5: Cosine Similarity Between Texts\n",
     "\n",
     "**Goal:** Find which texts are most similar using vector math\n",
     "\n",
-    "**Optional:** Compare with preprocessed texts\n",
+    "**Optional:** Test different Metrics (checkout `sklearn.metrics.pairwise`)\n",
+    "\n",
+    "**Super Optional:** Compare with preprocessed texts\n",
     "\n",
     "### 🧰 Tools:\n",
     "\n",
@@ -391,9 +548,7 @@
     "\n",
     "### ✅ Expected Output (example):\n",
     "\n",
-    "```python\n",
-    "Text 1 is most similar to Text 3\n",
-    "```"
+    "Heatmap plot of doc simillarity"
    ]
   },
   {
@@ -424,37 +579,33 @@
     "# TODO: Preprocess vergleich\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "similarity_matrix = cosine_similarity(tfidf)\n",
-    "df_similarity = pd.DataFrame(similarity_matrix, index=[f\"Text {i+1}\" for i in range(len(docs))],\n",
-    "                             columns=[f\"Text {i+1}\" for i in range(len(docs))])\n",
+    "# Function to plot heatmaps\n",
+    "def plot_heatmap(matrix, title, labels):\n",
+    "    df = pd.DataFrame(matrix, index=labels, columns=labels)\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(df, annot=True, cmap=\"viridis\")\n",
+    "    plt.title(title)\n",
+    "    plt.show()\n",
     "\n",
-    "sns.heatmap(df_similarity, annot=True, cmap=\"Blues\")\n",
-    "plt.title(\"Cosine Similarity Between Texts\")\n",
-    "plt.show()"
+    "labels = [f'Doc {i+1}' for i in range(len(docs))]\n",
+    "\n",
+    "cos_sim = cosine_similarity(X_tfidf)\n",
+    "plot_heatmap(cos_sim, \"Cosine Similarity\", labels)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6924507e-346d-46da-88cc-461c1a05d158",
+   "id": "bfdbd264-228e-4db2-a5d2-826702808afc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = [\n",
-    "    \"The ships hung in the sky in much the same way that bricks don’t.\",\n",
-    "    \"Time is an illusion. Lunchtime doubly so.\",\n",
-    "    \"The Answer to the Great Question... Of Life, the Universe and Everything... Is... Forty-two.\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2696d881-a028-47d0-8879-c5bfca1aabfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs"
+    "# Compute similarity/distance matrices\n",
+    "eucl_dist = euclidean_distances(X_tfidf)\n",
+    "manh_dist = manhattan_distances(X_tfidf)\n",
+    "\n",
+    "plot_heatmap(eucl_dist, \"Euclidean Distance\", labels)\n",
+    "plot_heatmap(manh_dist, \"Manhattan Distance\", labels)"
    ]
   },
   {
@@ -464,12 +615,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## TODO: Fix this!\n",
+    "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "# Preprocessing function\n",
     "def preprocess(text):\n",
-    "    print(text)\n",
     "    tokens = word_tokenize(text.lower())\n",
     "    tokens = [t for t in tokens if t.isalpha()]  # remove punctuation/numbers\n",
     "    tokens = [t for t in tokens if t not in stopwords.words('english')]  # remove stopwords\n",
@@ -477,10 +629,10 @@
     "    # TODO: stem\n",
     "    return tokens\n",
     "\n",
-    "docs = [preprocess(text) for text in docs]\n",
+    "pr_docs = [preprocess(text) for text in docs]\n",
     "\n",
     "# Initialize TF-IDF vectorizer\n",
-    "tfidf_vectorizer = TfidfVectorizer(pr)\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
     "tfidf = tfidf_vectorizer.fit_transform(docs)\n",
     "\n",
     "similarity_matrix = cosine_similarity(tfidf)\n",
@@ -495,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfdbd264-228e-4db2-a5d2-826702808afc",
+   "id": "65b91786-f505-48e9-aa15-3145f1b0c278",
    "metadata": {},
    "outputs": [],
    "source": []
