--- a/notebooks/NLP_102_Word_Embeddings_Word2Vec_UMAP.ipynb
+++ b/notebooks/NLP_102_Word_Embeddings_Word2Vec_UMAP.ipynb
@@ -8,7 +8,7 @@
     "# 🧠 NLP 102 – Word Embeddings & Visualizing Meaning\n",
     "\n",
     "## Featuring The Hitchhiker’s Guide to the Galaxy\n",
-    "### ⏱️ Duration: ~60 minutes\n",
+    "### ⏱️ Duration: ~30 minutes\n",
     "### 🛠️ Requirements: Python 3, Jupyter Notebook or any Python IDE, nltk, gensim"
    ]
   },
@@ -111,44 +111,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cde32fe",
-   "metadata": {},
-   "source": [
-    "### 📖 Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6d3ed40-ae44-4c4c-8778-3a91cba8b2ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "from gensim.utils import simple_preprocess\n",
-    "\n",
-    "sentences = [simple_preprocess(s) for s in corpus]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e961c68-893b-42c0-bf88-1bbac68ed6fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "from gensim.utils import simple_preprocess\n",
-    "\n",
-    "doc = open('data/guide.txt', encoding ='utf-8')\n",
-    "\n",
-    "sentences =[]\n",
-    "for sentence in doc.read().split('.'):\n",
-    "  sentences.append(simple_preprocess(sentence))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "755c25b8-5643-4db9-8fc0-8822a52e2879",
    "metadata": {},
    "source": [
@@ -157,6 +119,8 @@
     "**Goal:** Train a Word2Vec Model \n",
     "\n",
     "**Optional:** Explore different parameters\n",
+    "\n",
+    "**Super Optional:** Test a word not in the vocabulary\n",
     "\n",
     "### 🧰 Tools:\n",
     "\n",
@@ -168,8 +132,7 @@
     "- Create an instance of `Word2Vec`\n",
     "- Use the tokenized corpus as data\n",
     "- Test some word similarities\n",
-    "- Optional: Make one with `skip-gram` and one with `CBOW`\n",
-    "- OPtional:"
+    "- Optional: Make one with `skip-gram` and one with `CBOW`"
    ]
   },
   {
@@ -184,29 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ed9d43-ad0e-4c0f-b29a-96be001271d2",
-   "metadata": {},
-   "source": [
-    "### 📖 Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "194d6d94-796e-4716-9b6d-06820438b067",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models import Word2Vec\n",
-    "\n",
-    "model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=2, sg=1)\n",
-    "model.save(\"hitchhiker_word2vec_sg.model\")\n",
-    "\n",
-    "model.wv.most_similar(\"fish\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7c6436b3",
    "metadata": {},
    "source": [
@@ -214,13 +154,19 @@
     "\n",
     "**UMAP (Uniform Manifold Approximation and Projection)** is a dimensionality reduction technique that preserves both local and global structure in data, making it great for visualizing high-dimensional embeddings. It works by modeling the data as a graph and optimizing a low-dimensional representation that maintains the original relationships as closely as possible.\n",
     "\n",
-    "**Goal:** Identify the most meaningful words in each sentence\n",
+    "**Goal:** Reduce the word2vec vectors to two dimensions and visualize them.\n",
+    "\n",
+    "**Optional:** Use t-SNE as alternative\n",
+    "\n",
+    "**Super Optional:** Experiment with different parameters\n",
     "\n",
     "### 🧰 Tools:\n",
     "\n",
     "`UMAP` from `umap`\n",
     "\n",
     "`array` from `numpy`\n",
+    "\n",
+    "Optional: `TSNE` from `sklearn.manifold`\n",
     "\n",
     "### 💻 Task:\n",
     "- Extract all words and vectors\n",
@@ -230,39 +176,6 @@
     "### ✅ Expected Output (example):\n",
     "\n",
     "Plot of the reduced word embeddings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5000b53-3329-4e6c-8b5e-d94822223b89",
-   "metadata": {},
-   "source": [
-    "### 📖 Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e3b2ef0-d55f-40f1-bce4-9138a739d16c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import umap\n",
-    "\n",
-    "words = list(model.wv.index_to_key)\n",
-    "word_vectors = np.array([model.wv[word] for word in words])\n",
-    "\n",
-    "reducer = umap.UMAP(n_neighbors=5, min_dist=0.3, metric='cosine', random_state=42)\n",
-    "embeddings_2d = reducer.fit_transform(word_vectors)\n",
-    "\n",
-    "plt.figure(figsize=(10, 7))\n",
-    "for i, (x, y) in enumerate(embeddings_2d):\n",
-    "    plt.scatter(x, y, s=10)\n",
-    "    #plt.text(x + 0.1, y + 0.1, words[i], fontsize=8)\n",
-    "\n",
-    "plt.title(\"UMAP Projection of Embeddings\")\n",
-    "plt.axis('off')\n",
-    "plt.show()"
    ]
   },
   {
@@ -294,29 +207,6 @@
    "outputs": [],
    "source": [
     "# your code goes here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1555bdb4-ab88-41dc-930b-2d02d8fc3b97",
-   "metadata": {},
-   "source": [
-    "### 📖 Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9fe95ce-fd70-4f5a-bbea-d3dcde2fcf10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(embeddings_2d, columns=[\"x\", \"y\"])\n",
-    "df[\"word\"] = words\n",
-    "\n",
-    "fig = px.scatter(df, x=\"x\", y=\"y\", text=\"word\", title=\"Word Embeddings (Word2Vec + UMAP)\")\n",
-    "fig.update_traces(textposition='top center')\n",
-    "fig.show()"
    ]
   },
   {
@@ -362,93 +252,6 @@
    "source": [
     "# your code goes here"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffa6cce4-dc5e-43a4-9853-483ce96e2317",
-   "metadata": {},
-   "source": [
-    "### 📖 Solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "680d57ca-3568-4880-b302-91a84f637c8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gensim.downloader as api\n",
-    "\n",
-    "# Example: Load two models\n",
-    "model_glove = api.load(\"glove-wiki-gigaword-50\")\n",
-    "\n",
-    "words_to_test = [\"king\", \"apple\", \"computer\", \"music\"]\n",
-    "\n",
-    "for word in words_to_test:\n",
-    "    print(f\"\\n🔎 Word: {word}\")\n",
-    "    print(\"3 most similar:\", model_glove.most_similar(word)[:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfdbd264-228e-4db2-a5d2-826702808afc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gensim.downloader as api\n",
-    "\n",
-    "# Step 1: Load pretrained models\n",
-    "model_glove = api.load(\"glove-wiki-gigaword-50\")\n",
-    "model_glove_twitter = api.load(\"glove-twitter-50\")\n",
-    "\n",
-    "# Step 2: Select common words to compare\n",
-    "words_to_plot = [\"king\", \"queen\", \"man\", \"woman\", \"apple\", \"orange\", \"computer\", \"music\", \"city\", \"doctor\"]\n",
-    "\n",
-    "# Filter only words available in both vocabularies\n",
-    "words_common = [word for word in words_to_plot if word in model_glove_twitter and word in model_glove]\n",
-    "\n",
-    "# Step 3: Collect vectors\n",
-    "vectors = []\n",
-    "labels = []\n",
-    "sources = []\n",
-    "\n",
-    "for word in words_common:\n",
-    "    vectors.append(model_glove_twitter[word])\n",
-    "    labels.append(word)\n",
-    "    sources.append(\"GloveTwitter\")\n",
-    "\n",
-    "    vectors.append(model_glove[word])\n",
-    "    labels.append(word)\n",
-    "    sources.append(\"GloVe\")\n",
-    "\n",
-    "vectors = np.array(vectors)\n",
-    "\n",
-    "# Step 4: Reduce dimensions with UMAP\n",
-    "reducer = umap.UMAP(n_neighbors=5, min_dist=0.3, metric='cosine', random_state=42)\n",
-    "embedding_2d = reducer.fit_transform(vectors)\n",
-    "\n",
-    "# Step 5: Prepare dataframe for plotting\n",
-    "df = pd.DataFrame(embedding_2d, columns=[\"x\", \"y\"])\n",
-    "df[\"word\"] = labels\n",
-    "df[\"model\"] = sources\n",
-    "\n",
-    "# Step 6: Plot with Plotly\n",
-    "fig = px.scatter(df, x=\"x\", y=\"y\", text=\"word\", color=\"model\",\n",
-    "                 title=\"Comparison of Word Embeddings from Glove Twitter and GloVe Gigawords\")\n",
-    "fig.update_traces(textposition='top center')\n",
-    "fig.update_layout(legend_title_text='Embedding Source')\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7065f362-f1d0-4b28-8066-b4d1ae87c332",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
