--- a/notebooks/NLP_102_Word_Embeddings_Word2Vec_UMAP.ipynb
+++ b/notebooks/NLP_102_Word_Embeddings_Word2Vec_UMAP.ipynb
@@ -13,6 +13,169 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9d63b881-258a-46a7-a46a-80bc994e208f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: FOR COLAB INSTALL DEPENDENCIES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7e49bdc3-d43b-45b2-bc80-e72b5441fdd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- --------------\n",
+      "anyio                     4.9.0\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asttokens                 3.0.0\n",
+      "async-lru                 2.0.5\n",
+      "attrs                     25.3.0\n",
+      "babel                     2.17.0\n",
+      "beautifulsoup4            4.13.3\n",
+      "bleach                    6.2.0\n",
+      "certifi                   2025.1.31\n",
+      "cffi                      1.17.1\n",
+      "charset-normalizer        3.4.1\n",
+      "click                     8.1.8\n",
+      "comm                      0.2.2\n",
+      "contourpy                 1.3.0\n",
+      "cycler                    0.12.1\n",
+      "debugpy                   1.8.13\n",
+      "decorator                 5.2.1\n",
+      "defusedxml                0.7.1\n",
+      "exceptiongroup            1.2.2\n",
+      "executing                 2.2.0\n",
+      "fastjsonschema            2.21.1\n",
+      "fonttools                 4.57.0\n",
+      "fqdn                      1.5.1\n",
+      "gensim                    4.3.3\n",
+      "h11                       0.14.0\n",
+      "httpcore                  1.0.7\n",
+      "httpx                     0.28.1\n",
+      "idna                      3.10\n",
+      "importlib_metadata        8.6.1\n",
+      "importlib_resources       6.5.2\n",
+      "ipykernel                 6.29.5\n",
+      "ipython                   8.18.1\n",
+      "ipywidgets                8.1.5\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.2\n",
+      "Jinja2                    3.1.6\n",
+      "joblib                    1.4.2\n",
+      "json5                     0.12.0\n",
+      "jsonpointer               3.0.0\n",
+      "jsonschema                4.23.0\n",
+      "jsonschema-specifications 2024.10.1\n",
+      "jupyter_client            8.6.3\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.12.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.15.0\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.4.0\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.27.3\n",
+      "jupyterlab_widgets        3.0.13\n",
+      "kiwisolver                1.4.7\n",
+      "llvmlite                  0.43.0\n",
+      "MarkupSafe                3.0.2\n",
+      "matplotlib                3.9.4\n",
+      "matplotlib-inline         0.1.7\n",
+      "mistune                   3.1.3\n",
+      "narwhals                  1.34.0\n",
+      "nbclient                  0.10.2\n",
+      "nbconvert                 7.16.6\n",
+      "nbformat                  5.10.4\n",
+      "nest-asyncio              1.6.0\n",
+      "nltk                      3.9.1\n",
+      "nnfs                      0.5.1\n",
+      "notebook_shim             0.2.4\n",
+      "numba                     0.60.0\n",
+      "numpy                     1.26.4\n",
+      "overrides                 7.7.0\n",
+      "packaging                 24.2\n",
+      "pandas                    2.2.3\n",
+      "pandocfilters             1.5.1\n",
+      "parso                     0.8.4\n",
+      "pexpect                   4.9.0\n",
+      "pillow                    11.1.0\n",
+      "pip                       23.0.1\n",
+      "platformdirs              4.3.7\n",
+      "plotly                    6.0.1\n",
+      "prometheus_client         0.21.1\n",
+      "prompt_toolkit            3.0.50\n",
+      "psutil                    7.0.0\n",
+      "ptyprocess                0.7.0\n",
+      "pure_eval                 0.2.3\n",
+      "pycparser                 2.22\n",
+      "Pygments                  2.19.1\n",
+      "pynndescent               0.5.13\n",
+      "pyparsing                 3.2.3\n",
+      "python-dateutil           2.9.0.post0\n",
+      "python-json-logger        3.3.0\n",
+      "pytz                      2025.2\n",
+      "PyYAML                    6.0.2\n",
+      "pyzmq                     26.4.0\n",
+      "referencing               0.36.2\n",
+      "regex                     2024.11.6\n",
+      "requests                  2.32.3\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rpds-py                   0.24.0\n",
+      "scikit-learn              1.6.1\n",
+      "scipy                     1.13.1\n",
+      "seaborn                   0.13.2\n",
+      "Send2Trash                1.8.3\n",
+      "setuptools                58.1.0\n",
+      "six                       1.17.0\n",
+      "smart-open                7.1.0\n",
+      "sniffio                   1.3.1\n",
+      "soupsieve                 2.6\n",
+      "stack-data                0.6.3\n",
+      "terminado                 0.18.1\n",
+      "threadpoolctl             3.6.0\n",
+      "tinycss2                  1.4.0\n",
+      "tomli                     2.2.1\n",
+      "tornado                   6.4.2\n",
+      "tqdm                      4.67.1\n",
+      "traitlets                 5.14.3\n",
+      "types-python-dateutil     2.9.0.20241206\n",
+      "typing_extensions         4.13.1\n",
+      "tzdata                    2025.2\n",
+      "umap-learn                0.5.7\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.3.0\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 24.11.1\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.8.0\n",
+      "wheel                     0.45.1\n",
+      "widgetsnbextension        4.0.13\n",
+      "wordcloud                 1.9.4\n",
+      "wrapt                     1.17.2\n",
+      "zipp                      3.21.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "62ba0057",
    "metadata": {},
