Fixed var naming; Add Colab hint

--- a/notebooks/RAG_101_Local_and_API.ipynb
+++ b/notebooks/RAG_101_Local_and_API.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "def parse_document(file_path):\n",
     "    print(\"📄 Loading and parsing document...\")\n",
-    "    result = converter.convert(source=file_path)\n",
+    "    result = doc_converter.convert(source=file_path)\n",
     "    \n",
     "    if len(result.errors) > 0:\n",
     "        print(f\"❌ Conversion has {len(result.errors)} errors\")\n",
@@ -100,6 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On Colab: Upload data\n",
     "doc = parse_document(\"data/bitcoin.pdf\")"
    ]
   },
